fluxcd/infrastructure/services/overlays/production/phase-04-platform/uptime-kuma/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: uptime-kuma
          image: docker.io/louislam/uptime-kuma:2.5.6
          volumeMounts:
            - name: gossip-stone-uptime-kuma-data
              mountPath: /app/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 4Gi
  volumeClaimTemplates:
    - metadata:
        name: gossip-stone-uptime-kuma-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 5Gi
