fluxcd/infrastructure/services/overlays/production/phase-04-platform/uptime-kuma/service-uptime-kuma-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  labels:
    policy.prplanit.com/ingress: "true"
