fluxcd/infrastructure/services/overlays/production/phase-04-platform/uptime-kuma/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Monitoring (Gossip Stone💬)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - uptime.sofmeright.com
