fluxcd/infrastructure/services/overlays/production/phase-04-platform/uptime-kuma/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Monitoring (Gossip Stone💬)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "uptime.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          port: 3001
